--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "5.1.0",
+    "com.talecrafter.animationimporter": "https://github.com/talecrafter/AnimationImporter.git?path=/Assets",
+    "com.unity.2d.animation": "5.1.1",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.2.0",
     "com.unity.2d.sprite": "1.0.0",
